Refactored to classes.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ lib_deps =
   	ayushsharma82/AsyncElegantOTA@^2.2.7	
 build_flags = -Wunused-but-set-variable
 monitor_speed = 115200
-;upload_speed = 460800
+upload_speed = 921600
 board_build.partitions = min_spiffs.csv
 
 [env:esp32_ota]
