--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32]
 platform = espressif32
 board = az-delivery-devkit-v4
@@ -6,10 +16,10 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.5
 	adafruit/Adafruit GFX Library@^1.11.2
 	stblassitude/Adafruit SSD1306 Wemos Mini OLED@^1.1.2
-	esphome/ESP32-audioI2S@^2.1.0
 	ayushsharma82/WebSerial@^1.3.0
 	ESP Async WebServer
-  	ayushsharma82/AsyncElegantOTA@^2.2.7	
+	ayushsharma82/AsyncElegantOTA@^2.2.7	
+	https://github.com/schreibfaul1/ESP32-audioI2S.git
 build_flags = -Wunused-but-set-variable
 monitor_speed = 115200
 upload_speed = 921600
@@ -20,3 +30,4 @@ extends = env:esp32
 extra_scripts = platformio_upload.py
 upload_protocol = custom
 upload_url = http://192.168.1.7/update
+
