--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
@@ -5,3 +6,4 @@
 .vscode/ipch
 include/config.h
 data/
+speech-generator/
