--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32]
-platform = espressif32
+platform = espressif32@~3.5.0
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.00/platform-espressif32.zip
 board = az-delivery-devkit-v4
 framework = arduino
 lib_deps = 
@@ -19,11 +20,14 @@ lib_deps =
 	ayushsharma82/WebSerial@^1.3.0
 	ESP Async WebServer
 	ayushsharma82/AsyncElegantOTA@^2.2.7	
+	;https://github.com/ayushsharma82/AsyncElegantOTA.git
+	;https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/schreibfaul1/ESP32-audioI2S.git
 build_flags = -Wunused-but-set-variable
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed = 460800
 board_build.partitions = min_spiffs.csv
+
 
 [env:esp32_ota]
 extends = env:esp32
